--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "main": "src/index.js",
   "dependencies": {
-    "@babel/runtime": "^7.2.0"
+    "@babel/runtime": "^7.2.0",
+    "vhtml": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -15,6 +16,7 @@
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/plugin-transform-classes": "^7.2.2",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/plugin-transform-shorthand-properties": "^7.2.0",
@@ -31,12 +33,14 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-run": "^1.1.0",
+    "rollup-plugin-serve": "^0.6.1",
     "rollup-plugin-uglify": "^6.0.0"
   },
   "scripts": {
     "build": "rollup -cm",
     "prebuild": "prettier --write src/**",
     "dev": "rollup -cwm",
+    "serve": "yarn dev --environment DEV_SERVER",
     "test": "jest --config jest.config.js"
   },
   "files": [
