--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "figma-plugin-boilerplate",
+  "name": "figma-plugin-boilerplate-ui",
   "version": "0.0.1",
   "description": "An example plugin for Figma that utlize Figma Plugin Manager API.",
-  "repository": "https://cdes@github.com/cdes/figma-plugin-boilerplate.git",
+  "repository": "https://cdes@github.com/cdes/figma-plugin-boilerplate-ui.git",
+  "manifestUrl": "https://cdes@github.io/figma-plugin-boilerplate-ui/manifest.json",
   "author": "Ahmad Al Haddad <haddad@ah.sa>",
   "license": "MIT",
   "main": "src/index.js",
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "^7.3.1",
     "vhtml": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/plugin-transform-classes": "^7.2.2",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/plugin-transform-shorthand-properties": "^7.2.0",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/plugin-transform-template-literals": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "boxen": "^2.1.0",
+    "chalk": "^2.4.2",
     "jest": "^23.6.0",
-    "prettier": "^1.15.3",
+    "nodejs-fs-utils": "^1.1.2",
+    "prettier": "^1.16.1",
     "regenerator-runtime": "^0.13.1",
-    "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.2.0",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-clean": "^1.0.0",
     "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-run": "^1.1.0",
-    "rollup-plugin-scss": "^0.4.0",
-    "rollup-plugin-serve": "^0.6.1",
-    "rollup-plugin-uglify": "^6.0.0"
+    "rollup-plugin-sass": "^1.1.0",
+    "rollup-plugin-serve": "^1.0.0",
+    "rollup-plugin-uglify": "^6.0.1",
+    "sha.js": "^2.4.11"
   },
   "scripts": {
-    "build": "rollup -cm",
+    "build": "rollup -c",
     "prebuild": "prettier --write src/**",
-    "dev": "rollup -cwm",
-    "serve": "yarn dev --environment DEV_SERVER",
+    "serve": "rollup -cwm",
+    "start": "rollup -cwm  --environment RUN",
     "test": "jest --config jest.config.js"
   },
   "files": [
